@@ -1,4 +1,5 @@
 {{$NEXT}}
+- compatibility with Net::Stomp::MooseHelpers 1.3
 
 1.01      2012-07-10 13:08:58 Europe/London
 - use the new ReconnectOnFailure wapper role
